Shifted tasks to nimble + Fixed sass

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,9 +1,9 @@
-@use 'core'
-@use 'timeline'
+@use 'core' as *
+@use 'timeline' as *
 @import "bulma.sass"
-@charset "utf-8";
 
 
+@include pretty-scrollbar
 .icon i
 	color: $white-ter
 
